train on very small set

--- a/nb/data_prep.ipynb
+++ b/nb/data_prep.ipynb
@@ -489,6 +489,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/vijay/code/rft-grpo\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wordle import get_wordle_dataset\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"google/gemma-3-1b-it\")\n",
+    "\n",
+    "dataset = get_wordle_dataset(tokenizer)\n",
+    "dataset = dataset.select(range(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_sample(sample):\n",
+    "    print_keys = [ 'secret', 'input']\n",
+    "    for key in print_keys:\n",
+    "        print(f\"{key.upper()}: \\n{sample[key]}\")\n",
+    "        print(\"-\"*30)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SECRET: \n",
+      "ALLOT\n",
+      "------------------------------\n",
+      "INPUT: \n",
+      "<bos><start_of_turn>user\n",
+      "You are playing Wordle, a word-guessing game.\n",
+      "\n",
+      "### Game Rules:\n",
+      "- You have **6 tries** to guess a secret **5-letter** word.\n",
+      "- Each guess must be a valid **5-letter English word**.\n",
+      "- After each guess, you will receive feedback indicating how close your guess was.\n",
+      "\n",
+      "### Feedback Format:\n",
+      "Each letter in your guess will receive one of three symbols:\n",
+      "1. ✓ : The letter is in the word and in the CORRECT position.\n",
+      "2. - : The letter is in the word but in the WRONG position.\n",
+      "3. x : The letter is NOT in the word.\n",
+      "\n",
+      "### Example:\n",
+      "Secret Word: BRISK\n",
+      "\n",
+      "Guess 1: STORM → Feedback: S(-) T(x) O(x) R(-) M(x)\n",
+      "Guess 2: BRAVE → Feedback: B(✓) R(✓) A(x) V(x) E(x)\n",
+      "Guess 3: BRISK → Feedback: B(✓) R(✓) I(✓) S(✓) K(✓)\n",
+      "\n",
+      "### Response Format:\n",
+      "Think through the problem and feedback step by step. Make sure to first add your step by step thought process within <think> </think> tags. Then, return your guessed word in the following format: <guess> guessed-word </guess>.\n",
+      "\n",
+      "Make a new 5-letter word guess.\n",
+      "\n",
+      " Here is some previous feedback:\n",
+      "Guess 1: CRANE -> Feedback: C(x) R(x) A(-) N(x) E(x)\n",
+      "Guess 2: ADULT -> Feedback: A(✓) D(x) U(x) L(-) T(✓)<end_of_turn>\n",
+      "<start_of_turn>model\n",
+      "Let me solve this step by step.\n",
+      "<think><end_of_turn>\n",
+      "<start_of_turn>model\n",
+      "\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_sample(dataset[2])\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
